dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


# include/grass/defs/gis.h: 269
if _libs["grass_gis.8.5"].has("G_distance", "cdecl"):
    G_distance = _libs["grass_gis.8.5"].get("G_distance", "cdecl")
    G_distance.argtypes = [c_double, c_double, c_double, c_double]
    G_distance.restype = c_double

# include/grass/defs/gis.h: 270
if _libs["grass_gis.8.5"].has("G_distance_between_line_segments", "cdecl"):
    G_distance_between_line_segments = _libs["grass_gis.8.5"].get(
        "G_distance_between_line_segments", "cdecl"
    )
    G_distance_between_line_segments.argtypes = [
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
    ]
    G_distance_between_line_segments.restype = c_double

# include/grass/defs/gis.h: 272
if _libs["grass_gis.8.5"].has("G_distance_point_to_line_segment", "cdecl"):
    G_distance_point_to_line_segment = _libs["grass_gis.8.5"].get(
        "G_distance_point_to_line_segment", "cdecl"
    )
    G_distance_point_to_line_segment.argtypes = [
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
        c_double,
    ]
    G_distance_point_to_line_segment.restype = c_double

# include/grass/defs/gis.h: 276
if _libs["grass_gis.8.5"].has("G_done_msg", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_done_msg", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [String]
    G_done_msg = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 279
if _libs["grass_gis.8.5"].has("G_is_little_endian", "cdecl"):
    G_is_little_endian = _libs["grass_gis.8.5"].get("G_is_little_endian", "cdecl")
    G_is_little_endian.argtypes = []
    G_is_little_endian.restype = c_int

# include/grass/defs/gis.h: 282
if _libs["grass_gis.8.5"].has("G_init_env", "cdecl"):
    G_init_env = _libs["grass_gis.8.5"].get("G_init_env", "cdecl")
    G_init_env.argtypes = []
    G_init_env.restype = None

# include/grass/defs/gis.h: 283
if _libs["grass_gis.8.5"].has("G_getenv", "cdecl"):
    G_getenv = _libs["grass_gis.8.5"].get("G_getenv", "cdecl")
    G_getenv.argtypes = [String]
    G_getenv.restype = c_char_p

# include/grass/defs/gis.h: 284
if _libs["grass_gis.8.5"].has("G_getenv2", "cdecl"):
    G_getenv2 = _libs["grass_gis.8.5"].get("G_getenv2", "cdecl")
    G_getenv2.argtypes = [String, c_int]
    G_getenv2.restype = c_char_p

# include/grass/defs/gis.h: 285
if _libs["grass_gis.8.5"].has("G_getenv_nofatal", "cdecl"):
    G_getenv_nofatal = _libs["grass_gis.8.5"].get("G_getenv_nofatal", "cdecl")
    G_getenv_nofatal.argtypes = [String]
    G_getenv_nofatal.restype = c_char_p

# include/grass/defs/gis.h: 286
if _libs["grass_gis.8.5"].has("G_getenv_nofatal2", "cdecl"):
    G_getenv_nofatal2 = _libs["grass_gis.8.5"].get("G_getenv_nofatal2", "cdecl")
    G_getenv_nofatal2.argtypes = [String, c_int]
    G_getenv_nofatal2.restype = c_char_p

# include/grass/defs/gis.h: 287
if _libs["grass_gis.8.5"].has("G_setenv", "cdecl"):
    G_setenv = _libs["grass_gis.8.5"].get("G_setenv", "cdecl")
    G_setenv.argtypes = [String, String]
    G_setenv.restype = None

# include/grass/defs/gis.h: 288
if _libs["grass_gis.8.5"].has("G_setenv2", "cdecl"):
    G_setenv2 = _libs["grass_gis.8.5"].get("G_setenv2", "cdecl")
    G_setenv2.argtypes = [String, String, c_int]
    G_setenv2.restype = None

# include/grass/defs/gis.h: 289
if _libs["grass_gis.8.5"].has("G_setenv_nogisrc", "cdecl"):
    G_setenv_nogisrc = _libs["grass_gis.8.5"].get("G_setenv_nogisrc", "cdecl")
    G_setenv_nogisrc.argtypes = [String, String]
    G_setenv_nogisrc.restype = None

# include/grass/defs/gis.h: 290
if _libs["grass_gis.8.5"].has("G_setenv_nogisrc2", "cdecl"):
    G_setenv_nogisrc2 = _libs["grass_gis.8.5"].get("G_setenv_nogisrc2", "cdecl")
    G_setenv_nogisrc2.argtypes = [String, String, c_int]
    G_setenv_nogisrc2.restype = None

# include/grass/defs/gis.h: 291
if _libs["grass_gis.8.5"].has("G_unsetenv", "cdecl"):
    G_unsetenv = _libs["grass_gis.8.5"].get("G_unsetenv", "cdecl")
    G_unsetenv.argtypes = [String]
    G_unsetenv.restype = None

# include/grass/defs/gis.h: 292
if _libs["grass_gis.8.5"].has("G_unsetenv2", "cdecl"):
    G_unsetenv2 = _libs["grass_gis.8.5"].get("G_unsetenv2", "cdecl")
    G_unsetenv2.argtypes = [String, c_int]
    G_unsetenv2.restype = None

# include/grass/defs/gis.h: 293
if _libs["grass_gis.8.5"].has("G_get_env_name", "cdecl"):
    G_get_env_name = _libs["grass_gis.8.5"].get("G_get_env_name", "cdecl")
    G_get_env_name.argtypes = [c_int]
    G_get_env_name.restype = c_char_p

# include/grass/defs/gis.h: 294
if _libs["grass_gis.8.5"].has("G_set_gisrc_mode", "cdecl"):
    G_set_gisrc_mode = _libs["grass_gis.8.5"].get("G_set_gisrc_mode", "cdecl")
    G_set_gisrc_mode.argtypes = [c_int]
    G_set_gisrc_mode.restype = None

# include/grass/defs/gis.h: 295
if _libs["grass_gis.8.5"].has("G_get_gisrc_mode", "cdecl"):
    G_get_gisrc_mode = _libs["grass_gis.8.5"].get("G_get_gisrc_mode", "cdecl")
    G_get_gisrc_mode.argtypes = []
    G_get_gisrc_mode.restype = c_int

# include/grass/defs/gis.h: 296
if _libs["grass_gis.8.5"].has("G_create_alt_env", "cdecl"):
    G_create_alt_env = _libs["grass_gis.8.5"].get("G_create_alt_env", "cdecl")
    G_create_alt_env.argtypes = []
    G_create_alt_env.restype = None

# include/grass/defs/gis.h: 297
if _libs["grass_gis.8.5"].has("G_switch_env", "cdecl"):
    G_switch_env = _libs["grass_gis.8.5"].get("G_switch_env", "cdecl")
    G_switch_env.argtypes = []
    G_switch_env.restype = None

# include/grass/defs/gis.h: 298
if _libs["grass_gis.8.5"].has("G__read_mapset_env", "cdecl"):
    G__read_mapset_env = _libs["grass_gis.8.5"].get("G__read_mapset_env", "cdecl")
    G__read_mapset_env.argtypes = []
    G__read_mapset_env.restype = None

# include/grass/defs/gis.h: 299
if _libs["grass_gis.8.5"].has("G__read_gisrc_env", "cdecl"):
    G__read_gisrc_env = _libs["grass_gis.8.5"].get("G__read_gisrc_env", "cdecl")
    G__read_gisrc_env.argtypes = []
    G__read_gisrc_env.restype = None

# include/grass/defs/gis.h: 300
if _libs["grass_gis.8.5"].has("G__read_gisrc_path", "cdecl"):
    G__read_gisrc_path = _libs["grass_gis.8.5"].get("G__read_gisrc_path", "cdecl")
    G__read_gisrc_path.argtypes = []
    G__read_gisrc_path.restype = None

# include/grass/defs/gis.h: 307
if _libs["grass_gis.8.5"].has("G_info_format", "cdecl"):
    G_info_format = _libs["grass_gis.8.5"].get("G_info_format", "cdecl")
    G_info_format.argtypes = []
    G_info_format.restype = c_int

# include/grass/defs/gis.h: 308
if _libs["grass_gis.8.5"].has("G_message", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_message", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [String]
    G_message = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 309
if _libs["grass_gis.8.5"].has("G_verbose_message", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_verbose_message", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [String]
    G_verbose_message = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 310
if _libs["grass_gis.8.5"].has("G_important_message", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_important_message", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [String]
    G_important_message = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 312
if _libs["grass_gis.8.5"].has("G_fatal_error", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_fatal_error", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [String]
    G_fatal_error = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 314
if _libs["grass_gis.8.5"].has("G_warning", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_warning", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [String]
    G_warning = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 315
if _libs["grass_gis.8.5"].has("G_suppress_warnings", "cdecl"):
    G_suppress_warnings = _libs["grass_gis.8.5"].get("G_suppress_warnings", "cdecl")
    G_suppress_warnings.argtypes = [c_int]
    G_suppress_warnings.restype = c_int

# include/grass/defs/gis.h: 316
if _libs["grass_gis.8.5"].has("G_sleep_on_error", "cdecl"):
    G_sleep_on_error = _libs["grass_gis.8.5"].get("G_sleep_on_error", "cdecl")
    G_sleep_on_error.argtypes = [c_int]
    G_sleep_on_error.restype = c_int

# include/grass/defs/gis.h: 317
if _libs["grass_gis.8.5"].has("G_set_error_routine", "cdecl"):
    G_set_error_routine = _libs["grass_gis.8.5"].get("G_set_error_routine", "cdecl")
    G_set_error_routine.argtypes = [CFUNCTYPE(UNCHECKED(c_int), String, c_int)]
    G_set_error_routine.restype = None

# include/grass/defs/gis.h: 318
if _libs["grass_gis.8.5"].has("G_unset_error_routine", "cdecl"):
    G_unset_error_routine = _libs["grass_gis.8.5"].get("G_unset_error_routine", "cdecl")
    G_unset_error_routine.argtypes = []
    G_unset_error_routine.restype = None

# include/grass/defs/gis.h: 319
if _libs["grass_gis.8.5"].has("G_init_logging", "cdecl"):
    G_init_logging = _libs["grass_gis.8.5"].get("G_init_logging", "cdecl")
    G_init_logging.argtypes = []
    G_init_logging.restype = None

# include/grass/defs/gis.h: 322
if _libs["grass_gis.8.5"].has("G_file_name", "cdecl"):
    G_file_name = _libs["grass_gis.8.5"].get("G_file_name", "cdecl")
    G_file_name.argtypes = [String, String, String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_file_name.restype = ReturnString
    else:
        G_file_name.restype = String
        G_file_name.errcheck = ReturnString

# include/grass/defs/gis.h: 323
if _libs["grass_gis.8.5"].has("G_file_name_misc", "cdecl"):
    G_file_name_misc = _libs["grass_gis.8.5"].get("G_file_name_misc", "cdecl")
    G_file_name_misc.argtypes = [String, String, String, String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_file_name_misc.restype = ReturnString
    else:
        G_file_name_misc.restype = String
        G_file_name_misc.errcheck = ReturnString

# include/grass/defs/gis.h: 325
if _libs["grass_gis.8.5"].has("G_file_name_tmp", "cdecl"):
    G_file_name_tmp = _libs["grass_gis.8.5"].get("G_file_name_tmp", "cdecl")
    G_file_name_tmp.argtypes = [String, String, String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_file_name_tmp.restype = ReturnString
    else:
        G_file_name_tmp.restype = String
        G_file_name_tmp.errcheck = ReturnString

# include/grass/defs/gis.h: 326
if _libs["grass_gis.8.5"].has("G_file_name_basedir", "cdecl"):
    G_file_name_basedir = _libs["grass_gis.8.5"].get("G_file_name_basedir", "cdecl")
    G_file_name_basedir.argtypes = [String, String, String, String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_file_name_basedir.restype = ReturnString
    else:
        G_file_name_basedir.restype = String
        G_file_name_basedir.errcheck = ReturnString

# include/grass/defs/gis.h: 330
if _libs["grass_gis.8.5"].has("G_find_file", "cdecl"):
    G_find_file = _libs["grass_gis.8.5"].get("G_find_file", "cdecl")
    G_find_file.argtypes = [String, String, String]
    G_find_file.restype = c_char_p

# include/grass/defs/gis.h: 331
if _libs["grass_gis.8.5"].has("G_find_file2", "cdecl"):
    G_find_file2 = _libs["grass_gis.8.5"].get("G_find_file2", "cdecl")
    G_find_file2.argtypes = [String, String, String]
    G_find_file2.restype = c_char_p

# include/grass/defs/gis.h: 332
if _libs["grass_gis.8.5"].has("G_find_file_misc", "cdecl"):
    G_find_file_misc = _libs["grass_gis.8.5"].get("G_find_file_misc", "cdecl")
    G_find_file_misc.argtypes = [String, String, String, String]
    G_find_file_misc.restype = c_char_p
